--- a/form2.html
+++ b/form2.html
@@ -13,6 +13,7 @@
               </div>
               <span class="ant-typography product-price">
                 <strong class="value">R$ 0,00</strong>
+                <small>/Mensal</small>
               </span>
             </li>
           </ul>
@@ -26,7 +27,10 @@
             </div>
           </div>
           <h3 class="ant-typography price product-price" style="margin: 0px;">
-            <span style="text-align: left;"><span class="value">R$ 0,00</span><small>/Anual</small></span>
+            <span style="text-align: left;">
+              <span class="value">R$ 0,00</span>
+              <small>/Anual</small>
+            </span>
           </h3>
         </li>
       </div>
