--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="https://rawgit.com/RobinHerbots/Inputmask/5.x/dist/jquery.inputmask.js"></script>
     <script src="http://localhost:35729/livereload.js?snipver=1"></script>
-    <script src="index.js"></script>
+    <script src="index.js?v=2"></script>
   </body>
 </html>
