--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Google+Sans:400,500,700">
     <!-- <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"> -->
-    <link rel="stylesheet" href="modal.min.css">
+    <link rel="stylesheet" href="modal/modal.min.css">
     <title>jQuery Modal</title>
   </head>
 
   <body>
     <div style="padding: 50px; text-align: center;">
-      <button type="button" name="button" class="ModalToggle ant-btn ant-btn-secondary" data-product="virtual-office-basic">Office Basic</button>
-      <button type="button" name="button" class="ModalToggle ant-btn ant-btn-secondary" data-product="virtual-office-pro">Office Pro</button>
-      <button type="button" name="button" class="ModalToggle ant-btn ant-btn-secondary" data-product="virtual-office-corporate">Office Corporate</button>
-      <button type="button" name="button" class="ModalToggle ant-btn ant-btn-secondary" data-product="dedicated-office">Dedicated Office</button>
+      <button type="button" name="button" class="ModalToggle ant-btn ant-btn-secondary" data-product="1">Office Basic</button>
+      <button type="button" name="button" class="ModalToggle ant-btn ant-btn-secondary" data-product="2">Office Pro</button>
+      <button type="button" name="button" class="ModalToggle ant-btn ant-btn-secondary" data-product="3">Office Corporate</button>
+      <button type="button" name="button" class="ModalToggle ant-btn ant-btn-secondary" data-product="4s">Dedicated Office</button>
     </div>
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="https://rawgit.com/RobinHerbots/Inputmask/5.x/dist/jquery.inputmask.js"></script>
     <script src="http://localhost:35729/livereload.js?snipver=1"></script>
-    <script src="index.js?v=3"></script>
+    <script src="modal/index.js?v=6"></script>
   </body>
 </html>
