--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <button type="button" name="button" class="ModalToggle ant-btn ant-btn-secondary" data-product="1">Office Basic</button>
       <button type="button" name="button" class="ModalToggle ant-btn ant-btn-secondary" data-product="2">Office Pro</button>
       <button type="button" name="button" class="ModalToggle ant-btn ant-btn-secondary" data-product="3">Office Corporate</button>
-      <button type="button" name="button" class="ModalToggle ant-btn ant-btn-secondary" data-product="4s">Dedicated Office</button>
+      <button type="button" name="button" class="ModalToggle ant-btn ant-btn-secondary" data-product="4">Dedicated Office</button>
     </div>
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
